# redr

./: .gitignore  Cargo.toml  INSTRUCTIONS.md  MALWARE_DETECTION.md  NEW_FEATURES.md  README.md  THEORY.md  UPDATE_AGENT.md  generate_malware_sigs.py  inst  map.md  update_agent.sh
edr/agent/: Cargo.toml
edr/agent/src/: main.rs
edr/server/: Cargo.toml
edr/server/src/: main.rs
edr/server/ui/: index.html  index.html.old
test-malware/: cryptominer.sh  keylogger.sh  ransomware.sh
