[package]
name = "edr-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
tracing-subscriber = "0.3"
rand = "0.8"
futures-util = "0.3"
